fix(menu): set last thy-action  margin-right: -8px; and group arrow translateX(-2px) for collapsed #INFR-3824

--- a/src/menu/examples/group/group.component.scss
+++ b/src/menu/examples/group/group.component.scss
@@ -1,4 +1,5 @@
 .demo-menu-container {
     max-width: 300px;
+    padding-top: 12px;
     border: 1px solid #eee;
 }
